feat(AS-14): postgres DB integration (#7)
