# docs/swagger.json
@@ -32,14 +32,14 @@
                 }
             }
         },
-        "/accounts/{accountId}": {
+        "/accounts/{id}": {
             "get": {
                 "summary": "Get details of an account",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Account ID",
-                        "name": "accountId",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -71,7 +71,7 @@
                     {
                         "type": "string",
                         "description": "Account ID",
-                        "name": "accountId",
+                        "name": "id",
                         "in": "query",
                         "required": true
                     }
