# handler/accounts.go
@@ -1,7 +1,7 @@
 package handler
 
 import (
-	"fmt"
+	db "kidsloop/account-service/database"
 
 	"github.com/gin-gonic/gin"
 )
@@ -12,36 +12,39 @@ import (
 // @Failure  400,500  {object}  model.APIError
 // @Router   /accounts [put]
 func CreateAccount(c *gin.Context) {
-	fmt.Println("CreateAccount")
-	c.JSON(200, gin.H{
-		"account_id": "abc123",
-	})
+	account, err := db.Database.CreateAccount()
+	if err != nil {
+		c.String(500, err.Error())
+	}
+	c.JSON(200, account)
 }
 
 // GetAccount ... Get Account
 // @Summary  Get details of an account
-// @Param    accountId  path      string  true  "Account ID"
+// @Param    id  path      string  true  "Account ID"
 // @Success  200        {object}  model.Account
 // @Failure  400,500    {object}  model.APIError
-// @Router   /accounts/{accountId} [get]
+// @Router   /accounts/{id} [get]
 func GetAccount(c *gin.Context) {
-	fmt.Println("GetAccount")
 	id := c.Param("id")
-	c.JSON(200, gin.H{
-		"id": id,
-	})
+	account, err := db.Database.GetAccount(id)
+	if err != nil {
+		c.String(500, err.Error())
+	}
+	c.JSON(200, account)
 }
 
 // DeleteAccount ... Delete Account
 // @Summary  Delete an account
-// @Param    accountId  query     string  true  "Account ID"
+// @Param    id  query     string  true  "Account ID"
 // @Success  200        {object}  model.Account
 // @Failure  400,500    {object}  model.APIError
-// @Router   /accounts/{accountId} [delete]
+// @Router   /accounts/{id} [delete]
 func DeleteAccount(c *gin.Context) {
-	fmt.Println("DeleteAccount")
 	id := c.Param("id")
-	c.JSON(200, gin.H{
-		"id": id,
-	})
+	err := db.Database.DeleteAccount(id)
+	if err != nil {
+		c.String(500, err.Error())
+	}
+	c.String(200, "Success")
 }
